tests/ui/parser/bounds-type.stderr
error: `?` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:10:8
   |
LL |     T: ?'a,
   |        ^

error: `~const` may only modify trait bounds, not lifetime bounds
  --> $DIR/bounds-type.rs:15:8
   |
LL |     T: ~const 'a,
   |        ^^^^^^

error: aborting due to 2 previous errors

